# Projeto-WASM

./: README.md  benchmark.py
c-only/: tiny-aes-test.c
c-only/RSA-Library-C-Fixed/: rsa-c  rsa-c.html  rsa-c.js  rsa-c.wasm  rsa.c  test.c
c-only/rsa/: README.md  rsa  rsa.h  rsa.html  rsa.js  test  test.c
c-only/tiny-aes/: a.out  aes.h.gch  teste.html  teste.js  teste.wasm  tiny  tiny-aes-test.c  tiny.js  tiny.wasm
c-wasm/: teste
c-wasm/rsa/: rsa.wasm
c-wasm/tiny-aes-wasm/: teste.js  teste.wasm  tiny.html
compareGraphs/: timegraph.py
javascript/: aes-js.js  package-lock.json  rsa-js.js
javascript/aes/: aes-js.js
javascript/rsa/: LICENSE.txt  LICENSE.txt.save  rsa-js.js
rust-only/rsa_lib/: Cargo.toml
rust-only/rsa_lib/src/: main.rs
rust-only/rust-aes128/: Cargo.toml  main.rs  rust.sh  teste
rust-only/rust-aes128/src/: main.rs
rust-wasm/rust-aes128-wasm/: teste.d  teste.js  teste.wasm  teste.wasm.map
wabt/: teste.wasm  teste.wat  teste2.wat
wasabi/: extract-signature.js  fib.js  fib.wasm  teste.c
wasabiTesting/comparec/: beta.js  call-graph.dot  function_orientor.js  teste.html  teste.js  teste.wasabi.js  teste.wasm
wasi/: emcc-teste.wasm  fib-to-out.wasm  output.txt  teste.c  teste.wat
