[package]
name = "rsa_lib"
version = "0.1.0"
authors = ["arctumn <arctumn@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 1
rpath = false

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
rayon = "1.5.0"