[package]
name = "teste"
version = "0.1.0"
authors = ["arctumn <arctumn@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6.0"
aes-soft = "0.6.4"
block-modes = "0.7.0"
hex-literal = "0.3.1"
libc = "0.2.80"